--- a/src/main/webapp/js/jquery-moaModal-master/index.html
+++ b/src/main/webapp/js/jquery-moaModal-master/index.html
@@ -858,39 +858,39 @@ display: inline-block; }
 .tabs > div { padding: 10px; }
 /*NAV MENU
 Author: Craig Erskine
-Description: Dynamic basicMenu System - Horizontal/Vertical
+Description: Dynamic BasicMenu System - Horizontal/Vertical
 */
 
 ul.nav { margin: 0; padding: 0; list-style: none; position: relative; }
-ul.nav ul { min-width: 200px; /* Sub basicMenu Width */ margin: 0; list-style: none; display: none; position: absolute; top: 100%; }
+ul.nav ul { min-width: 200px; /* Sub BasicMenu Width */ margin: 0; list-style: none; display: none; position: absolute; top: 100%; }
 ul.nav ul ul, ul.nav ul ul ul { top: 0; left: 100%; position: absolute; }
 ul.nav li { float: left; display: inline; position: relative; }
 ul.nav ul li { width: 100%; display: block; }
 ul.nav.right ul { right: 0; }
 ul.nav.right ul ul, ul.nav.right ul ul ul { left: -100%; right: 100%; }
-/* Root basicMenu */
+/* Root BasicMenu */
 
 /*Adding right chvron icon to lists with nested drop down lists*/
 /*\0000a0 is a space HTML entity = so we have three spaces befor right chevron icon*/
 ul.nav .dir:before { font-family: 'FontAwesome'; margin-left: 10px; content: "\f054"; }
 ul.nav a:hover .dir:before { color: rgba(255, 255, 255, .5); }
 ul.nav a { padding: 8px; float: left; display: block; background: rgba(0, 0, 0, .3); border: 1px solid rgba(255, 255, 255, .5); color: rgba(255, 255, 255, .6); text-decoration: none; height: 1%; margin: 1px; }
-/* Root basicMenu Hover Persistence */
+/* Root BasicMenu Hover Persistence */
 ul.nav a:hover, ul.nav li:hover a, ul.nav li.iehover a { background: rgba(0, 0, 0, .5); color: #FFF; }
-/* 2nd basicMenu */
+/* 2nd BasicMenu */
 ul.nav li:hover li a, ul.nav li.iehover li a { float: none; background: rgba(0, 0, 0, .5); }
-/* 2nd basicMenu Hover Persistence */
+/* 2nd BasicMenu Hover Persistence */
 ul.nav li:hover li a:hover, ul.nav li:hover li:hover a, ul.nav li.iehover li a:hover, ul.nav li.iehover li.iehover a { background: rgba(0, 0, 0, .7); }
-/* 3rd basicMenu */
+/* 3rd BasicMenu */
 ul.nav li:hover li:hover li a, ul.nav li.iehover li.iehover li a { background: rgba(0, 0, 0, .7); }
-/* 3rd basicMenu Hover Persistence */
+/* 3rd BasicMenu Hover Persistence */
 ul.nav li:hover li:hover li a:hover, ul.nav li:hover li:hover li:hover a, ul.nav li.iehover li.iehover li a:hover, ul.nav li.iehover li.iehover li.iehover a { background: rgba(0, 0, 0, .9); }
-/* 4th basicMenu */
+/* 4th BasicMenu */
 /*ul.nav li:hover li:hover li:hover li a,ul.nav li.iehover li.iehover li.iehover li a {*/
 /*	background: #666;*/
 /*}*/
 
-/* 4th basicMenu Hover */
+/* 4th BasicMenu Hover */
 /*ul.nav li:hover li:hover li:hover li a:hover,ul.nav li.iehover li.iehover li.iehover li a:hover {*/
 /*	background: #333;*/
 /*}*/
@@ -898,7 +898,7 @@ ul.nav li:hover li:hover li a:hover, ul.nav li:hover li:hover li:hover a, ul.nav
 /* Hover Function - Do Not Move */
 ul.nav li:hover ul ul, ul.nav li:hover ul ul ul, ul.nav li.iehover ul ul, ul.nav li.iehover ul ul ul { display: none; }
 ul.nav li:hover ul, ul.nav ul li:hover ul, ul.nav ul ul li:hover ul, ul.nav li.iehover ul, ul.nav ul li.iehover ul, ul.nav ul ul li.iehover ul { display: block; }
-/*Small device select basicMenu*/
+/*Small device select BasicMenu*/
 
 
 select.selectMenu { min-width: 200px; width: 100%; padding: 10px; border: none; font-size: 16px; }
@@ -1174,7 +1174,7 @@ top: 6px; left: 6px; width: 45%; padding-right: 10px; white-space: nowrap; }
 
 /*NAV MENU*/
 
-/* Root basicMenu */
+/* Root BasicMenu */
 
 ul.nav a {
     padding: 8px;
@@ -1191,20 +1191,20 @@ ul.nav .dir:before {
     content: "\f054";
 }
 
-/* Root basicMenu Hover Persistence */
+/* Root BasicMenu Hover Persistence */
 ul.nav a:hover,
 ul.nav li:hover a,ul.nav li.iehover a {
     background: rgba(0, 0, 0, .5);
     color: #FFF;
 }
 
-/* 2nd basicMenu */
+/* 2nd BasicMenu */
 ul.nav li:hover li a,
 ul.nav li.iehover li a {
     background: rgba(0, 0, 0, .5);
 }
 
-/* 2nd basicMenu Hover Persistence */
+/* 2nd BasicMenu Hover Persistence */
 ul.nav li:hover li a:hover,
 ul.nav li:hover li:hover a,
 ul.nav li.iehover li a:hover,
@@ -1212,14 +1212,14 @@ ul.nav li.iehover li.iehover a {
     background: rgba(0, 0, 0, .7);
 }
 
-/* 3rd basicMenu */
+/* 3rd BasicMenu */
 ul.nav li:hover li:hover li a,
 ul.nav li.iehover li.iehover li a {
     background: rgba(0, 0, 0, .7);
 
 }
 
-/* 3rd basicMenu Hover Persistence */
+/* 3rd BasicMenu Hover Persistence */
 ul.nav li:hover li:hover li a:hover,
 ul.nav li:hover li:hover li:hover a,
 ul.nav li.iehover li.iehover li a:hover,
